trunk/Archive2/48/1fafcc022d7587/output
main.cpp: In function 'int main()':
main.cpp:15:12: error: request for member 'begin' in 'v', which is of non-class type 'int [6]'
     sort(v.begin(),v.end());
            ^
main.cpp:15:22: error: request for member 'end' in 'v', which is of non-class type 'int [6]'
     sort(v.begin(),v.end());
                      ^
