trunk/Archive2/48/1fafcc022d7587/main.cpp
#include <iostream>
#include <string>
#include <cstring>
#include <vector>
#include <algorithm>
#include <iomanip>
#include <iterator>

using namespace std;

int main()
{   
    int v[]{1,7,4,2,9,7};
    
    sort(v.begin(),v.end());
    
     
    return 0;
}
